force-app/main/default/objects/AV_CommentsHistory__c/AV_CommentsHistory__c.object-meta.xml
<CustomObject>
    <description>Objeto para guardar el tracking de comentarios relacionados con un objeto</description>
    <label>Comments History</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Comments History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>