force-app/main/default/objects/AV_CommentsHistory__c/fields/AV_AssignedEmployee__c.field-meta.xml
<CustomField>
    <fullName>AV_AssignedEmployee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de tipo Lookup que se relaciona con el objeto Contact</description>
    <label>Assigned Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comments Histories</relationshipLabel>
    <relationshipName>Comments_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>