force-app/main/default/objects/AV_CommentsHistory__c/fields/AV_Event__c.field-meta.xml
<CustomField>
    <fullName>AV_Event__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>