force-app/main/default/objects/AV_CommentsHistory__c/fields/AV_ModificationDate__c.field-meta.xml
<CustomField>
    <fullName>AV_ModificationDate__c</fullName>
    <description>Fecha y hora de la modificacion</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Modification Date</label>
    <type>DateTime</type>
</CustomField>