force-app/main/default/objects/AV_CommentsHistory__c/fields/AV_NewComment__c.field-meta.xml
<CustomField>
    <fullName>AV_NewComment__c</fullName>
    <description>Campo de tipo long text area que contiene el valor del comentario nuevo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>