force-app/main/default/objects/AV_CommentsHistory__c/fields/AV_OldComment__c.field-meta.xml
<CustomField>
    <fullName>AV_OldComment__c</fullName>
    <description>Campo de tipo long text area que contiene el valor del comentario antiguo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>