force-app/main/default/objects/AV_CommentsHistory__c/fields/AV_OldStatus__c.field-meta.xml
<CustomField>
    <fullName>AV_OldStatus__c</fullName>
    <label>OldStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potencial</fullName>
            </value>
            <value>
                <fullName>Cerrado positivo</fullName>
            </value>
            <value>
                <fullName>Cerrado negativo</fullName>
            </value>
            <value>
                <fullName>No interesado</fullName>
            </value>
            <value>
                <fullName>Con venta</fullName>
            </value>
            <value>
                <fullName>Vencido</fullName>
            </value>
            <value>
                <fullName>Producto rechazado</fullName>
            </value>
            <value>
                <fullName>Producto contratado</fullName>
            </value>
            <value>
                <fullName>En gestión/insistir</fullName>
            </value>
            <value>
                <fullName>No Gestionada</fullName>
            </value>
            <value>
                <fullName>En curso</fullName>
            </value>
            <value>
                <fullName>CIBE_Cerrado positivo</fullName>
            </value>
            <value>
                <fullName>CIBE_Pendiente_Firma</fullName>
            </value>
            <value>
                <fullName>CIBE_Vencido</fullName>
            </value>
            <value>
                <fullName>En Gestión</fullName>
                <isActive>false</isActive>
                <label>En Gestión</label>
            </value>
            <value>
                <fullName>No apto</fullName>
                <isActive>false</isActive>
                <label>No apto</label>
            </value>
            <value>
                <fullName>Vencida</fullName>
                <isActive>false</isActive>
                <label>Vencida</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>