force-app/main/default/objects/AV_CommentsHistory__c/fields/AV_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AV_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de tipo lookup relacionado con elobjeto Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Comments Histories</relationshipLabel>
    <relationshipName>Comments_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>