force-app/main/default/objects/AV_CommentsHistory__c/fields/AV_Task__c.field-meta.xml
<CustomField>
    <fullName>AV_Task__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>